# Face_Attendance

./: .env.example  .gitignore  PROJECT_ROADMAP.md  README.md  pyproject.toml
app/: main.py
app/ai/: face_recognition_service.py
app/core/: config.py  database.py
app/models/: __init__.py  attendance.py  employee.py  face_embedding.py
app/routers/: attendance.py  employee.py  face_embedding.py
app/schemas/: attendance.py  employee.py  face_embedding.py  face_registration.py
app/services/: attendance.py  employee.py  face_embedding.py
docker/: docker-compose.yml
docs/: api.md  architecture.md  attendance-flow.md  database.md
scripts/: create_tables.py  test_face.py
test/: test_db.py
