[project]
name = "face-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "insightface>=1.0.1",
    "onnxruntime>=1.26.0",
    "pgvector>=0.4.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.50",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
